add correct folders and corret paths

--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
     </footer>
-    <script rel="stylesheet" src="./scripty.js"></script> 
+    <script rel="stylesheet" src="./scripts/index-page.js"></script> 
 </body>
 </html>
