add javascript to shows page

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -11,8 +11,8 @@
         <div class="navbar-logo__container"><a href="./index.html"><img class="navbar-logo" src="../assets/logo/Logo-bandsite.svg"></a></div>
         <div class="navbar-pages__cotainer">
             <ul class="navbar-pages">
-                <li><a href="./index.html">Biography</a></li>
-                <li><a href="./shows.html">Shows</a></li>
+                <li><a href="../index.html">Biography</a></li>
+                <li><a href="../pages/shows.html">Shows</a></li>
             </ul>
         </div>    
     </nav>
@@ -22,18 +22,6 @@
             <p class="shows-header__image--subText">Beautiful Beasts Album</p>
             <p class="shows-header__image--text">Queen of Yellow x For The Strings</p>
         </div>
-    <div class="shows-list">
-        <p class="shows-list__headerText">Shows</p>
-        <div class="shows-list__section">
-            <div class="shows-list__details"></div>
-            <div class="shows-list__info">
-                <p class="shows-lists__date">date</p>
-                <p class="shows-lists__venue">venue</p>
-                <p class="shows-lists__location">location</p>
-            </div>
-            <button>Buy Tickets</button>
-        </div>
-    </div>
     </section>
     <section class="contact-info">
         <p class="contact-info__title">Get in Touch</p> 
