--- a/pages/shows.html
+++ b/pages/shows.html
@@ -16,7 +16,7 @@
             </ul>
         </div>    
     </nav>
-
+    
     <section class="shows">
         <div class="shows-header__image">
             <p class="shows-header__image--subText">Beautiful Beasts Album</p>
@@ -24,6 +24,7 @@
             <div class="shows-header__audio"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/78061225&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/raheqalyasamin" title="Raheqalyasamin" target="_blank" style="color: #cccccc; text-decoration: none;">Raheqalyasamin</a> · <a href="https://soundcloud.com/raheqalyasamin/celine-dion-my-heart-will-go" title="Celine Dion~~~ My heart will go on" target="_blank" style="color: #cccccc; text-decoration: none;">Celine Dion~~~ My heart will go on</a></div></div>
         </div>
     </section>
+    <footer class="additional-info">
     <section class="contact-info">
         <p class="contact-info__title">Get in Touch</p> 
         <div class="contact-info__container">
@@ -56,8 +57,8 @@
             </div>
         </div>
     </section> 
-    <footer class="additional-info">
         <div class="additional-info__container">
+            <div class="contact-info__logo2"><img src="../assets/logo/Logo-bandsite.svg"></div>
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
     </footer>
