--- a/pages/shows.html
+++ b/pages/shows.html
@@ -19,11 +19,16 @@
     
     <section class="shows">
         <div class="shows-header__image">
-            <p class="shows-header__image--subText">Beautiful Beasts Album</p>
-            <p class="shows-header__image--text">Queen of Yellow x For The Strings</p>
+            <div class="shows-header__text-container">
+                <p class="shows-header__image--subText">Beautiful Beasts Album</p>
+                <p class="shows-header__image--text">Queen of Yellow x For The Strings</p>
+            </div>
             <div class="shows-header__audio"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/78061225&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/raheqalyasamin" title="Raheqalyasamin" target="_blank" style="color: #cccccc; text-decoration: none;">Raheqalyasamin</a> · <a href="https://soundcloud.com/raheqalyasamin/celine-dion-my-heart-will-go" title="Celine Dion~~~ My heart will go on" target="_blank" style="color: #cccccc; text-decoration: none;">Celine Dion~~~ My heart will go on</a></div></div>
         </div>
     </section>
+    <main class="showsContainer">
+
+    </main>
     <footer class="additional-info">
     <section class="contact-info">
         <p class="contact-info__title">Get in Touch</p> 
@@ -62,6 +67,8 @@
         <p class="additional-info--mod">Copyright The Bees Knees © 2021 All Rights Reserved</p>
         </div>
     </footer>
-    <script rel="stylesheet" src="../scripts/build-shows-page.js"></script>   
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
+    <script src="../scripts/band-site-api.js" type="module" async></script>
+    <script src="../scripts/build-shows-page.js" type="module" async></script>  
 </body>
 </html>
